language/move-lang/tests/move_check/dependencies/use_friend_transitive_by_use.exp
error: 

    ┌── tests/move_check/dependencies/use_friend_transitive_by_use.move:16:9 ───
    │
 16 │         C::c()
    │         ^^^^ Invalid use of module '0x2::C' in module '0x2::B'.
    ·
 16 │         C::c()
    │         ---- Using this module creates a dependency cycle: '0x2::C' is a friend of '0x2::A' uses '0x2::B' uses '0x2::C'
    │

